--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "main": "./src/app.js",
   "scripts": {
     "dev": "webpack-dev-server ./src/app.js & gulp watch",
-    "build": "gulp"
+    "build": "gulp",
+    "dest": "gulp uglify & gulp minifyCss & gulp htmlmin"
   },
-  "keywords": ["ng1 webpack gulp","angular webpack"],
+  "keywords": [
+    "ng1 webpack gulp",
+    "angular webpack"
+  ],
   "author": "huahuadavids",
   "license": "ISC",
   "dependencies": {
@@ -20,10 +24,15 @@
     "babel-preset-es2015": "^6.16.0",
     "css-loader": "^0.25.0",
     "eslint-plugin-angular": "^1.4.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
+    "gulp-clean-css": "^2.0.13",
     "gulp-eslint": "^3.0.1",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-sequence": "^0.4.6",
+    "gulp-uglify": "^2.0.0",
     "gulp-webpack": "^1.5.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.0",
@@ -31,6 +40,7 @@
     "node-sass": "^3.10.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2"
   }
