--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
   },
   // "extends": "eslint:recommended",
   "plugins": [
-    "angular"
+    "angular",
+    "standard"
   ],
   "globals":{
     "angular":true
@@ -19,7 +20,11 @@
   "rules":{
     "semi": [2, "always"],
     "strict": 2,
-    "semi-spacing": [0, {"before": false, "after": true}],
-    "indent": [2, 2]
+    "comma-spacing": 2,
+    "semi-spacing": ["error", {"before": false, "after": true}],
+    "indent": [2, 2],
+    "eqeqeq": 2,
+    "no-eval": 2,
+    "init-declarations": 2
   }
 }
