--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "using es6 to write angular with webpack ang gulp",
   "main": "./src/app.js",
   "scripts": {
-    "dev": "webpack-dev-server ./src/app.js & gulp watch",
-    "build": "gulp",
-    "dest": "gulp uglify & gulp minifyCss & gulp htmlmin"
+    "dev": "webpack-dev-server",
+    "dest": "gulp"
   },
   "keywords": [
     "ng1 webpack gulp",
@@ -23,25 +22,27 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "css-loader": "^0.25.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-loader": "^1.6.0",
     "eslint-plugin-angular": "^1.4.1",
+    "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
-    "gulp-clean-css": "^2.0.13",
-    "gulp-eslint": "^3.0.1",
-    "gulp-htmlmin": "^3.0.0",
     "gulp-sequence": "^0.4.6",
-    "gulp-uglify": "^2.0.0",
     "gulp-webpack": "^1.5.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.0",
     "json-loader": "^0.5.4",
+    "my-local-ip": "^1.0.0",
     "node-sass": "^3.10.1",
+    "open-browser-webpack-plugin": "^0.0.2",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
+    "webpack-cleanup-plugin": "^0.4.1",
     "webpack-dev-server": "^1.16.2"
   }
 }
